fixed pagination button, changed blog title, fixed spacing

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -70,6 +70,7 @@ body {
     position: fixed;
     width: 100%;
     z-index: 2;
+    background-color: #fff;
 }
 
 #top.scrolled {
