--- a/themes/kube/static/css/kube.css
+++ b/themes/kube/static/css/kube.css
@@ -1237,7 +1237,7 @@ button:hover,
     border-radius: 3px;
     display: inline-block;
     padding: 8px 12px;
-    line-height: 1;
+    /*line-height: 1; */
     white-space: nowrap;
     border: 1px solid transparent; }
   .pagination a {
